--- a/src/pages/ImageWindow.scss
+++ b/src/pages/ImageWindow.scss
@@ -78,7 +78,7 @@
             cursor: grabbing;
         }
 
-        img {
+        img, video {
             max-width: none;
             max-height: none;
             object-fit: contain;
