--- a/src/pages/SnsPage.scss
+++ b/src/pages/SnsPage.scss
@@ -414,7 +414,8 @@
 
             &.live {
                 top: 8px;
-                left: 8px;
+                right: 8px;
+                left: auto;
                 transform: none;
                 width: 24px;
                 height: 24px;
